--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.77.3",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "bs58": "^5.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "mongodb": "^5.6.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "sass": "^1.63.6",
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   }
 }
