--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/wallet-adapter-react-ui": "^0.9.31",
+    "@solana/wallet-adapter-wallets": "^0.19.18",
     "@solana/web3.js": "^1.77.3",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -20,6 +24,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
